# statistical-audit-env

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  app.py  environment.py
server/baselines/: few_shot_cot.py  keyword_baseline.py  zero_shot_llm.py
server/graders/: base_grader.py
server/tasks/: __init__.py
server/tasks/ab_testing/: easy.json  hard.json  medium.json
server/tasks/causal_inference/: hard.json  medium.json  very_hard.json
server/tasks/regression/: easy.json  hard.json  medium.json
tests/: conftest.py  test_environment.py  test_grader.py  test_models.py  test_server.py
